Adjusted colours for better visibility

--- a/index.html
+++ b/index.html
@@ -75,31 +75,31 @@
                     <div class="row">
                       <div class="col-sm-7">
                         <div class="about-me-vs">
-                            <div class="flexbox-marker item" id="playstation"><i class="fa-brands fa-playstation" style="color: #88bbd6;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #B8B8B8;"></i></div>
-                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker item" id="playstation"><i class="fa-brands fa-playstation" style="color: #8bb3ba;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker item" id="xbox"><i class="fa-brands fa-xbox" style="color: #88bbd6;"></i></div>                    
+                            <div class="flexbox-marker item" id="xbox"><i class="fa-brands fa-xbox" style="color: #8bb3ba;"></i></div>                    
                         </div>
                         <div class="about-me-vs">
-                            <div class="flexbox-marker item" id="android"><i class="fa-brands fa-android" style="color: #88bbd6;"></i></div>
+                            <div class="flexbox-marker item" id="android"><i class="fa-brands fa-android" style="color: #8bb3ba;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
-                            <div class="flexbox-marker item" id="apple"><i class="fa-brands fa-apple" style="color: #88bbd6;"></i></div>                    
+                            <div class="flexbox-marker item" id="apple"><i class="fa-brands fa-apple" style="color: #8bb3ba;"></i></div>                    
                         </div>
                         <div class="about-me-vs">
-                            <div class="flexbox-marker item" id="pizza"><i class="fa-solid fa-pizza-slice" style="color: #88bbd6;"></i></div>
+                            <div class="flexbox-marker item" id="pizza"><i class="fa-solid fa-pizza-slice" style="color: #8bb3ba;"></i></div>
                             <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
                             <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker item" id="burger"><i class="fa-solid fa-burger" style="color: #88bbd6;"></i></div>                    
+                            <div class="flexbox-marker item" id="burger"><i class="fa-solid fa-burger" style="color: #8bb3ba;"></i></div>                    
                         </div>
                       </div>
                       <div class="col-sm-5">
@@ -120,7 +120,7 @@
             </div>
         </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#E9E9E9" fill-opacity="1" d="M0,320L120,272C240,224,480,128,720,106.7C960,85,1200,139,1320,165.3L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#cdcdcd" fill-opacity="1" d="M0,320L120,272C240,224,480,128,720,106.7C960,85,1200,139,1320,165.3L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
 </section>
 <!-- ABOUT ME END -->
 
@@ -335,7 +335,7 @@
 <!-- CONTACT ME END -->
 
 <!-- FOOTER SECTION -->
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#E9E9E9" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,96C384,117,480,171,576,213.3C672,256,768,288,864,261.3C960,235,1056,149,1152,128C1248,107,1344,149,1392,170.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#cdcdcd" fill-opacity="1" d="M0,96L48,90.7C96,85,192,75,288,96C384,117,480,171,576,213.3C672,256,768,288,864,261.3C960,235,1056,149,1152,128C1248,107,1344,149,1392,170.7L1440,192L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 <section id="footer" class="footer">
 
     <div class="container-fluid text-center">
