Darkedned text colour for increased visibility

--- a/index.html
+++ b/index.html
@@ -76,29 +76,29 @@
                       <div class="col-sm-7">
                         <div class="about-me-vs">
                             <div class="flexbox-marker item" id="playstation"><i class="fa-brands fa-playstation" style="color: #8bb3ba;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
                             <div class="flexbox-marker item" id="xbox"><i class="fa-brands fa-xbox" style="color: #8bb3ba;"></i></div>                    
                         </div>
                         <div class="about-me-vs">
                             <div class="flexbox-marker item" id="android"><i class="fa-brands fa-android" style="color: #8bb3ba;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #888888;"></i></div>
                             <div class="flexbox-marker item" id="apple"><i class="fa-brands fa-apple" style="color: #8bb3ba;"></i></div>                    
                         </div>
                         <div class="about-me-vs">
                             <div class="flexbox-marker item" id="pizza"><i class="fa-solid fa-pizza-slice" style="color: #8bb3ba;"></i></div>
-                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #B8B8B8;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
-                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #cdcdcd;"></i></div>
+                            <div class="flexbox-marker marker" id="full"><i class="fa-solid fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
+                            <div class="flexbox-marker marker" id="empty"><i class="fa-regular fa-square" style="color: #888888;"></i></div>
                             <div class="flexbox-marker item" id="burger"><i class="fa-solid fa-burger" style="color: #8bb3ba;"></i></div>                    
                         </div>
                       </div>
