Added project to projects section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!--LEFT BLOCK-->
             <div class="col-md-6 about-me-image">
                 <div class="circular-portrait">
-                    <img src="images/profilepic_resized.jpg" class="img-fluid" alt="profile picture">
+                    <img src="images/grad_picture.jpeg" class="img-fluid" alt="profile picture">
                 </div>
                 <div class="get-in-touch">
                     <div class="flexbox-container item-1"><a class="nav-link" target=”_blank” href="https://www.linkedin.com/in/m-mathilde34/"><i class="fas fa-brands fa-linkedin"></i></a></div>
@@ -274,7 +274,7 @@
                 </div>
                 <div class="card-footer">
                     <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> GA Code</a>
-                <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> Results Analysis</a>
+                    <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman-Analysis" class="btn btn-primary"><i class="fa-brands fa-github"></i> Results Analysis</a>
                 </div>
             </div>
             </div>
@@ -309,6 +309,29 @@
                 </div>
                 <div class="card-footer">
                     <a target=”_blank” href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                </div>
+            </div>
+            </div>
+            <div class="col">
+            <div class="card h-100">
+                <img src="images/website-building.jpg" class="card-img-top" alt="website">
+                <div class="card-body">
+                <h5 class="card-title">Code First Girls - Course Project</h5>
+                <p class="card-text">
+                    Following a short 8-weeks course to learn the fundamentals of web development, our last task was to create a website (1-2 pages) to showcase all we had learnt.
+                    For this end of course project, I decided to put together a small blog (main page and contact page). The website is reponsive and behaves well on any device and screen size.
+                </p>
+                <div class="tags">
+                    <span class="language-tool-tag">HTML</span>
+                    <span class="language-tool-tag">CSS</span>
+                    <span class="language-tool-tag">BOOTSTRAP</span>
+                    <span class="language-tool-tag">JAVASCRIPT</span>
+                </div>
+                <br >
+                </div>
+                <div class="card-footer">
+                    <a target=”_blank” href="https://github.com/m-mathilde34/CFG-project" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                    <a target=”_blank” href="https://m-mathilde34.github.io/CFG-project/" class="btn btn-primary"><i class="fa-brands fa-github"></i> Website</a>
                 </div>
             </div>
             </div>
