Added skill tags as well as language + library

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg menu">
             <div class="container-md">
-            <a class="navbar-brand" href="index.html">Mathilde M.</a>
+            <a class="navbar-brand" href="index.html">Mathilde M., MSc, BA.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -67,7 +67,7 @@
                 
                 <div class="col-md-6 about-me-title">
                     <h1 class="display-2">
-                        <span class="display-2--heading">Aspiring Developer</span>
+                        <span class="display-2--heading">Aspiring Developer (AI/ML or Web)</span>
                     </h1>              
                 </div>
 
@@ -112,7 +112,7 @@
 
 
                 <div class="col-md-6 about-me-description">
-                    <p><br />Having just completed a Msc of Computer Science with the University of Bath, I am now looking for a role as a software developer.
+                    <p><br />Having just completed a Msc of Computer Science with the University of Bath, I am now looking for a role such as AI / ML developer, or Web developer.
                         My dissertation involved the creation of a novel dataset, and I am particularly interested in Machine Learning as a way to protect
                         and preserve our cultural heritage for future generations to enjoy. I like working on both front-end and back-end projects and I am 
                         currently working on personal projects such as modelling the Solar System.</p>
@@ -233,18 +233,26 @@
                     respectively.
                     As there is very little research in art classification and no cultural-heritage specific dataset
                     readily available for visual classification tasks, the findings and output of this project opened
-                    up new avenues of research for cultural-heritage tasks.</p>
-                <div class="tags">
-                    <span class="language-tool-tag">PYTHON</span>
-                    <span class="language-tool-tag">SCRAPY</span>
-                    <span class="language-tool-tag">JUPYTER</span>
-                    <span class="language-tool-tag">DOCKER</span>
-                    <span class="language-tool-tag">KERAS</span>
-                    <span class="language-tool-tag">TENSORFLOW</span>
-                    <span class="language-tool-tag">SEABORN</span>
-                    <span class="language-tool-tag">PANDAS</span>
+                    up new avenues of research for cultural-heritage tasks.
+                </p>
+                <div class="tags-background">
+                    <div class="tags">
+                        <span class="language-tool-tag">PYTHON</span>
+                        <span class="language-tool-tag">SCRAPY</span>
+                        <span class="language-tool-tag">JUPYTER</span>
+                        <span class="language-tool-tag">DOCKER</span>
+                        <span class="language-tool-tag">KERAS</span>
+                        <span class="language-tool-tag">TENSORFLOW</span>
+                        <span class="language-tool-tag">SEABORN</span>
+                        <span class="language-tool-tag">PANDAS</span>
+                    </div>
+                    <div class="tags">
+                        <span class="skill-tag">DATASET CREATION</span>
+                        <span class="skill-tag">CNN</span>
+                        <span class="skill-tag">MACHINE LEARNING</span>
+                        <span class="skill-tag">TRANSFORMERS</span>
+                    </div>
                 </div>
-                <br >
                 </div>
                 <div class="card-footer">
                     <a target=”_blank” href="https://github.com/m-mathilde34/artefact-classification" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
@@ -261,16 +269,25 @@
                     In this project, we created a genetic algorithm in order to find a solution deemed 'good enough' to this problem.
                     There are five stages to this algorithm : (1) Initialisation of the population, (2) Fitness function, (3) Selection of the fittest individuals (the parents),
                     (4) Reproduction, (5) Mutation. In this project, the <i>Tournament Selection</i> was chosen as the selection method. For reproduction, due to the nature of this NP-problem,
-                    <i>Ordered Crossover</i> was selected. Finally, for the mutation step, <i>Swap Mutation</i> was chosen.</p>
+                    <i>Ordered Crossover</i> was selected. Finally, for the mutation step, <i>Swap Mutation</i> was chosen.
+                </p>
+                <div class="tags-background">
                     <div class="tags">
                         <span class="language-tool-tag">JAVA</span>
                         <span class="language-tool-tag">GRADLE</span>
-                        <span class="language-tool-tag">TEST-DRIVEN DEVELOPMENT</span>
                         <span class="language-tool-tag">PYTHON</span>
                         <span class="language-tool-tag">JUPYTER</span>
                         <span class="language-tool-tag">SEABORN</span>
                     </div>
-                    <br >
+                    <div class="tags">
+                        <span class="skill-tag">TEST-DRIVEN DEVELOPMENT</span>
+                        <span class="skill-tag">OBJECT ORIENTED PROGRAMMING</span>
+                        <span class="skill-tag">GENETIC ALGORITHM</span>
+                        <span class="skill-tag">METAHEURISTIC ALGORITHM</span>
+                        <span class="skill-tag">TRAVELING SALESMAN PROBLEM</span>
+                        <span class="skill-tag">NP-COMPLETE</span>
+                    </div>
+                </div>
                 </div>
                 <div class="card-footer">
                     <a target=”_blank” href="https://github.com/m-mathilde34/Traveling-Salesman---Genetic-Algorithm" class="btn btn-primary"><i class="fa-brands fa-github"></i> GA Code</a>
@@ -299,13 +316,18 @@
                     This online portfolio which you are currently browsing was created to act as an online resume showcasing all my acquired skills.
                     This was also an opportunity to learn to work with Sass and reinforce my grip over HTML, CSS, and Boostrap.
                 </p>
-                <div class="tags">
-                    <span class="language-tool-tag">HTML</span>
-                    <span class="language-tool-tag">CSS</span>
-                    <span class="language-tool-tag">BOOTSTRAP</span>
-                    <span class="language-tool-tag">SASS</span>
+                <div class="tags-background">
+                    <div class="tags">
+                        <span class="language-tool-tag">HTML</span>
+                        <span class="language-tool-tag">CSS</span>
+                        <span class="language-tool-tag">BOOTSTRAP</span>
+                        <span class="language-tool-tag">SASS</span>
+                    </div>
+                    <div class="tags">
+                        <span class="skill-tag">RESPONSIVE DESIGN</span>
+                        <span class="skill-tag">UX DESIGN</span>
+                    </div>
                 </div>
-                <br >
                 </div>
                 <div class="card-footer">
                     <a target=”_blank” href="https://github.com/m-mathilde34/portfolio" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
@@ -321,13 +343,18 @@
                     Following a short 8-weeks course to learn the fundamentals of web development, our last task was to create a website (1-2 pages) to showcase all we had learnt.
                     For this end of course project, I decided to put together a small blog (main page and contact page). The website is reponsive and behaves well on any device and screen size.
                 </p>
-                <div class="tags">
-                    <span class="language-tool-tag">HTML</span>
-                    <span class="language-tool-tag">CSS</span>
-                    <span class="language-tool-tag">BOOTSTRAP</span>
-                    <span class="language-tool-tag">JAVASCRIPT</span>
+                <div class="tags-background">
+                    <div class="tags">
+                        <span class="language-tool-tag">HTML</span>
+                        <span class="language-tool-tag">CSS</span>
+                        <span class="language-tool-tag">BOOTSTRAP</span>
+                        <span class="language-tool-tag">JAVASCRIPT</span>
+                    </div>
+                    <div class="tags">
+                        <span class="skill-tag">RESPONSIVE DESIGN</span>
+                        <span class="skill-tag">UX DESIGN</span>
+                    </div>
                 </div>
-                <br >
                 </div>
                 <div class="card-footer">
                     <a target=”_blank” href="https://github.com/m-mathilde34/CFG-project" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
