--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg menu">
             <div class="container-md">
-            <a class="navbar-brand" href="index.html">Mathilde M., MSc, BA.</a>
+            <a class="navbar-brand" href="index.html">Mathilde M., MSc.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
