--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                 <div class="col"><img src="images/skills_tools/tools/icons8-github.svg"></div>
             </div>
             <div class="row">
-                <div class="col-3"><img src="images/skills_tools/tools/icons8-git.svg"></div>
-                <div class="col-3"><img src="images/skills_tools/tools/icons8-my-sql.svg"></div>
-                <div class="col-3"><img src="images/skills_tools/tools/icons8-sass.svg"></div>
-                <div class="col-3"><img src="images/skills_tools/tools/Jupyter_logo.svg.png" width="100" height="100"></div>
+                <div class="col"><img src="images/skills_tools/tools/icons8-git.svg"></div>
+                <div class="col"><img src="images/skills_tools/tools/icons8-my-sql.svg"></div>
+                <div class="col"><img src="images/skills_tools/tools/icons8-sass.svg"></div>
+                <div class="col"><img src="images/skills_tools/tools/Jupyter_logo.svg.png" width="100" height="100"></div>
             </div>
             <div class="row">
                 <div class="col"><img src="images/skills_tools/tools/scrapylogo.png" width="100" height="100"></div>
