Added Snake project to portfolio

--- a/index.html
+++ b/index.html
@@ -297,13 +297,28 @@
             </div>
             <div class="col">
             <div class="card h-100">
-                <img src="images/solar-system.jpg" class="card-img-top" alt="Solar System">
+                <img src="images/snake.jpg" class="card-img-top" alt="Solar System">
                 <div class="card-body">
-                <h5 class="card-title">The Solar System - In progress <i class="fa-regular fa-hourglass-half"></i></h5>
-                <p class="card-text">Description to come.</p>
+                <h5 class="card-title">Snake</h5>
+                <p class="card-text">Having grown up playing snake on a Nokia 3310, I wanted to pay homage
+                    to this classic game by implementing my own version in Python, using the Pygame library.
+                </p>
+                <p class="card-text">The above image for this project was found on hmd.com. All credits to them.
+                    Their article with said picture can be found : <a href="https://www.hmd.com/en_int/blog/snake-game-revisited-surprising-facts-and-fascinating-trivia" style="color: #888888">here</a></p>
+                <div class="tags-background">
+                    <div class="tags">
+                        <span class="language-tool-tag">PYTHON</span>
+                        <span class="language-tool-tag">PYGAME</span>
+                    </div>
+                    <div class="tags">
+                        <span class="skill-tag">OBJECT ORIENTED PROGRAMMING</span>
+                        <span class="skill-tag">UX DESIGN</span>
+                        <span class="skill-tag">GAME DEVELOPMENT</span>
+                    </div>
+                </div>
                 </div>
                 <div class="card-footer">
-                    <a target=”_blank” href="https://github.com/m-mathilde34" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
+                    <a target=”_blank” href="https://github.com/m-mathilde34/snake-game" class="btn btn-primary"><i class="fa-brands fa-github"></i> Code</a>
                 </div>
             </div>
             </div>
